src/objects/Farmer_Product_Delivery__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Number_of_Baskets__c</fullName>
        <formula>Number_of_Baskets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Number of Baskets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Number_of_Kilos__c</fullName>
        <formula>Number_of_Kilos__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Number of Kilos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Number_of_Units_of_Presentation__c</fullName>
        <formula>Number_of_Units_of_Presentation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Number of Units of Presentation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Unit_of_Presentation__c</fullName>
        <formula>Farmer_Order_Allocation__r.Assigned_Unit_of_Presentation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Unit of Presentation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <formula>Farmer_Order_Allocation__r.Client__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Delivery Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Farmer_Code__c</fullName>
        <description>Farmer Code if the farmer is being tracked due to historical rejections</description>
        <label>Farmer Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Farmer_Order_Allocation__c</fullName>
        <label>Farmer Order Allocation</label>
        <referenceTo>Farmer_Order_Allocation__c</referenceTo>
        <relationshipLabel>Farmer Product Deliveries</relationshipLabel>
        <relationshipName>Farmer_Product_Deliveries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Delivery_On_Time__c</fullName>
        <label>Is Delivery On Time</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Baskets__c</fullName>
        <label>Number of Baskets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Kilos__c</fullName>
        <label>Number of Kilos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Units_of_Presentation__c</fullName>
        <label>Number of Units of Presentation</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Code__c</fullName>
        <formula>Farmer_Order_Allocation__r.Order_Code__c</formula>
        <label>Order Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentacion__c</fullName>
        <label>Presentación</label>
        <picklist>
            <picklistValues>
                <fullName>5 al día</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bandeja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolsa transparente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ekono</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Por paquete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solo a mil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Todo a 2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vitafilado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Receipt_Number__c</fullName>
        <label>Receipt Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_of_Presentation__c</fullName>
        <label>Unit of Presentation</label>
        <picklist>
            <picklistValues>
                <fullName>250 Gr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>400 Gr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500 Gr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 al día</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a $2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desgranada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desgranada a Granel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desgranada x 250 Gr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ekono</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granel económica/Kg.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granel/Kg.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kg.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paquete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solo a mil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Todo a $2000 x 1000g</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Todo a $2000 x 1200g</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Todo a $2000 x 800g</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Und.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Und/220Gr.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>typeOfDelivery__c</fullName>
        <description>Marks whether and delivery was equal to the initial order</description>
        <label>Type of delivery</label>
        <picklist>
            <picklistValues>
                <fullName>Productor - entrega IGUAL a asignación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Productor-entrega DIFERENTE a asignación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proveedor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Farmer Product Delivery</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Assigned_Number_of_Baskets__c</columns>
        <columns>Assigned_Number_of_Kilos__c</columns>
        <columns>Assigned_Number_of_Units_of_Presentation__c</columns>
        <columns>Assigned_Unit_of_Presentation__c</columns>
        <columns>Farmer_Code__c</columns>
        <columns>Farmer_Order_Allocation__c</columns>
        <columns>Number_of_Baskets__c</columns>
        <columns>Number_of_Kilos__c</columns>
        <columns>Number_of_Units_of_Presentation__c</columns>
        <columns>Unit_of_Presentation__c</columns>
        <columns>Receipt_Number__c</columns>
        <columns>Delivery_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FPD-{00000000}</displayFormat>
        <label>Farmer Product Delivery Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Farmer Product Deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>